# routes/email.js
@@ -1,0 +1,8 @@
+const emailController = require('../controllers/emailController');
+const router = require('express').Router();
+
+module.exports = (app) => {
+    app.use("/api/v2/email", router);
+    router.post("/contact_us", emailController.contactUs);
+    router.post("/order_confirmed", emailController.orderConfirmed);
+}
